--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "name": "Tab Manager (Testing)",
     "version": "1.0",
     "description": "Test extension code for use in the Tab Manager.",
+    "permissions": ["storage"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
