--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,9 @@
     "name": "Tab Manager (Testing)",
     "version": "1.0",
     "description": "Test extension code for use in the Tab Manager.",
-    "permissions": ["tabs", "declarativeContent", "storage"],
+    "permissions": ["tabs",
+                    "declarativeContent", 
+                    "storage"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
