--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Tab Manager (Testing)",
+    "name": "Tab Manager",
     "version": "1.0",
     "description": "Test extension code for use in the Tab Manager.",
     "permissions": ["tabs",
